# spring-cloud-config-python-client

./: .gitattributes  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.integration.yml  pyproject.toml
.github/workflows/: python-package.yml
scripts/: run_integration_tests.sh  wait_for_config_server.py
spring_cloud_config_client/: __init__.py  __main__.py  exceptions.py  props.py
tests/integration/: test_props_integration.py
tests/integration/config-repo/: application-prod.yml
tests/unit/: test_props.py
